update other routes to show up on api-docs and work with db
